Changed the toList of the mappers